# kolainvoice

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: catalogue.rs  clients.rs  invoices.rs  license.rs  mod.rs  payments.rs  quotes.rs  settings.rs
app/src-tauri/src/database/: catalogue.rs  clients.rs  invoices.rs  migrations.rs  mod.rs  payments.rs  quotes.rs  settings.rs
app/src-tauri/src/database/sql/: 001_init.sql  002_category_desc_color.sql  003_settings_fields.sql  004_quote_object.sql  005_relax_payment_method.sql  006_settings_updates.sql  007_quote_invoice_link.sql  008_payments.sql  009_client_anonyme.sql  010_license.sql
app/src-tauri/src/license/: crypto.rs  device_id.rs  manager.rs  mod.rs
app/src-tauri/src/models/: catalogue.rs  client.rs  invoice.rs  mod.rs  payment.rs  quote.rs  settings.rs
app/src-tauri/src/pdf/: mod.rs
app/src/api/: catalogue.ts  clients.ts  invoices.ts  license.ts  payments.ts  quotes.ts  settings.ts
app/src/hooks/: useCatalogue.ts  useClients.ts  useInvoices.ts  (+6 more)
docs/plans/: 2026-03-10-implementation-plan.md  2026-03-10-phase0-design.md  2026-03-11-licensing-design.md  2026-03-11-licensing-implementation.md  2026-03-11-onboarding-design.md  2026-03-11-onboarding.md  2026-03-11-vente-directe-design.md  2026-03-11-vente-directe.md
(+21 files in other folders)
